--- a/src/Pages/Home/userCard/UserCard.css
+++ b/src/Pages/Home/userCard/UserCard.css
@@ -37,3 +37,57 @@
   font-weight: bold;
   font-size: 22px;
 }
+
+.table {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  margin-top: 25px;
+  border-top: 1px solid rgb(117 93 191);
+  padding: 0 10px;
+}
+.followers {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-right: 1px solid rgb(117 93 191);
+  padding: 5px 10px;
+  color: black;
+}
+.following {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-right: 1px solid rgb(117 93 191);
+  padding: 5px 7px;
+  color: black;
+}
+.location {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 5px 10px;
+  color: black;
+}
+.numbers {
+  margin: 5px 0;
+}
+.details-button-div {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+button {
+  background-color: rgb(117 93 191);
+  margin: 0 auto;
+  color: #ffff;
+  border: 0;
+  outline: 0;
+  width: 120px;
+  height: 30px;
+  margin-top: 10px;
+  cursor: pointer;
+}
