--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -13,6 +13,7 @@
 }
 .logo {
   color: #fff;
+  font-weight: bold;
 }
 ul {
   color: #fff;
@@ -21,4 +22,10 @@ ul {
 }
 li {
   margin: 0 10px;
+  color: rgb(192, 192, 192);
+  transition: all 0.3s;
+  cursor: pointer;
+}
+li:hover {
+  color: rgb(255, 255, 255);
 }
