--- a/src/Pages/Home/userCard/UserCard.css
+++ b/src/Pages/Home/userCard/UserCard.css
@@ -2,12 +2,17 @@
   display: inline-block;
   width: 260px !important;
   height: 350px !important;
-  background-color: rgb(117 93 191);
   background-color: #fff;
   border-radius: 20px;
   text-decoration: none;
   box-shadow: 0px 3px 10px 2px rgb(185 184 218);
   transition: all 0.3s;
+  z-index: 999;
+}
+.card {
+  position: relative;
+  background-color: rgb(255, 255, 255);
+  border-radius: 20px;
 }
 .user-card:hover {
   box-shadow: 0px 4px 10px 5px rgb(185 184 218);
@@ -21,13 +26,14 @@
   border-radius: 20px 20px 0 0;
   height: 130px;
   background-color: rgb(117 93 191);
+  position: relative;
 }
 .user-img img {
   width: 150px;
   height: 150px;
   border-radius: 50%;
   position: absolute;
-  top: 40%;
+  top: 30%;
 }
 .user-name {
   color: rgb(117 93 191);
@@ -43,7 +49,7 @@
   width: 100%;
   justify-content: space-between;
   margin-top: 25px;
-  border-top: 1px solid rgb(117 93 191);
+  border-top: 1px solid rgb(171, 155, 219);
   padding: 0 10px;
 }
 .followers {
@@ -51,18 +57,18 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border-right: 1px solid rgb(117 93 191);
+  border-right: 1px solid rgb(171, 155, 219);
   padding: 5px 10px;
-  color: black;
+  color: rgb(171, 155, 219);
 }
 .following {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border-right: 1px solid rgb(117 93 191);
+  border-right: 1px solid rgb(171, 155, 219);
   padding: 5px 7px;
-  color: black;
+  color: rgb(171, 155, 219);
 }
 .location {
   display: flex;
@@ -70,10 +76,11 @@
   justify-content: center;
   align-items: center;
   padding: 5px 10px;
-  color: black;
+  color: rgb(171, 155, 219);
 }
 .numbers {
   margin: 5px 0;
+  color: black;
 }
 .details-button-div {
   width: 100%;
@@ -90,4 +97,40 @@ button {
   height: 30px;
   margin-top: 10px;
   cursor: pointer;
+}
+
+.slider-cont {
+  width: 260px !important;
+  height: 200px;
+  background-color: rgb(117 93 191);
+  position: absolute;
+  top: 20%;
+  right: -0%;
+  transition: all 0.5s;
+  z-index: -2;
+}
+.slider-cont-active {
+  right: -80%;
+}
+.slider {
+  width: 100%;
+  height: 100%;
+}
+.slide {
+  width: 130px;
+  height: 35px;
+  background-color: rgb(117 93 191);
+  cursor: pointer;
+  color: #fff;
+  transform: rotate(90deg);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  right: -31%;
+  top: 44%;
+  z-index: -10;
+}
+a {
+  text-decoration: none;
 }
