--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -10,6 +10,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 0 10px;
+  z-index: 10000000000000;
 }
 .logo {
   color: #fff;
@@ -22,10 +23,16 @@ ul {
 }
 li {
   margin: 0 10px;
-  color: rgb(192, 192, 192);
+  color: rgb(241, 241, 241);
   transition: all 0.3s;
   cursor: pointer;
 }
 li:hover {
   color: rgb(255, 255, 255);
+}
+
+@media screen and (max-width: 639px) {
+  ul {
+    display: none;
+  }
 }
