--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -4,7 +4,7 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  background-color: aliceblue;
+  background-color: #fff;
 }
 
 form {
@@ -13,6 +13,17 @@ form {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+.input-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 100px;
+  position: fixed;
+  z-index: 100000000;
+  background-color: #fff;
+  box-shadow: 3px 3px 10px 0px rgb(191, 169, 255);
 }
 
 .search-input-cont {
@@ -40,14 +51,15 @@ form {
   color: rgb(117 93 191);
   font-size: 13px;
   font-style: italic;
-  margin-top: 20px;
   animation: shakeing 2s;
+  z-index: 100000000000;
 }
 .user-container {
   width: 100%;
-  margin-top: 30px;
+  margin-top: 120px;
   padding: 0 10px;
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
 }
 
@@ -63,5 +75,15 @@ form {
   }
   100% {
     margin-left: 5px;
+  }
+}
+
+@media screen and (max-width: 639px) {
+  .search-input-cont {
+    height: 40px;
+  }
+  .input-wrapper {
+    padding: 0 20px;
+    height: 80px;
   }
 }
