--- a/src/Pages/Home/userCard/UserCard.css
+++ b/src/Pages/Home/userCard/UserCard.css
@@ -1,19 +1,16 @@
 .user-card {
   display: inline-block;
-  width: 260px !important;
-  height: 350px !important;
+  width: 230px !important;
+  height: 280px !important;
   background-color: #fff;
   border-radius: 20px;
   text-decoration: none;
   box-shadow: 0px 3px 10px 2px rgb(185 184 218);
   transition: all 0.3s;
   z-index: 999;
+  margin: 20px 40px;
 }
-.card {
-  position: relative;
-  background-color: rgb(255, 255, 255);
-  border-radius: 20px;
-}
+
 .user-card:hover {
   box-shadow: 0px 4px 10px 5px rgb(185 184 218);
 }
@@ -39,7 +36,7 @@
   color: rgb(117 93 191);
   display: flex;
   justify-content: center;
-  margin-top: 67px;
+  margin-top: 77px;
   font-weight: bold;
   font-size: 22px;
 }
@@ -99,38 +96,24 @@ button {
   cursor: pointer;
 }
 
-.slider-cont {
-  width: 260px !important;
-  height: 200px;
-  background-color: rgb(117 93 191);
-  position: absolute;
-  top: 20%;
-  right: -0%;
-  transition: all 0.5s;
-  z-index: -2;
-}
-.slider-cont-active {
-  right: -80%;
-}
-.slider {
-  width: 100%;
-  height: 100%;
-}
-.slide {
-  width: 130px;
-  height: 35px;
-  background-color: rgb(117 93 191);
-  cursor: pointer;
-  color: #fff;
-  transform: rotate(90deg);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  right: -31%;
-  top: 44%;
-  z-index: -10;
-}
 a {
   text-decoration: none;
+}
+
+@media screen and (max-width: 639px) {
+  .user-img img {
+    width: 110px;
+    height: 110px;
+    top: 45%;
+  }
+}
+@media screen and (max-width: 462px) {
+  .user-card {
+    width: 200px !important;
+    height: 240px !important;
+  }
+  .user-name {
+    font-size: 20px;
+    margin-top: 60px;
+  }
 }
