--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -42,10 +42,36 @@ form {
 .search-input-cont input {
   width: 100%;
   height: 100%;
+  color: rgb(117 93 191);
+  font-size: 15px;
   border-radius: 50px;
   padding: 0 10px;
   border: 0;
   outline: 0;
+}
+::placeholder {
+  color: rgb(117 93 191);
+  opacity: 0.5;
+}
+.loading {
+  position: absolute;
+  top: 30%;
+  color: rgb(117 93 191);
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: 3px solid rgb(117 93 191);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+}
+.loading span {
+  width: 45px;
+  height: 7px;
+  background-color: rgb(255, 255, 255);
+  position: absolute;
+  animation: move 1s forwards infinite;
 }
 .user-error {
   color: rgb(117 93 191);
@@ -61,6 +87,7 @@ form {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  transition: all 0.5s;
 }
 
 @keyframes shakeing {
@@ -75,6 +102,20 @@ form {
   }
   100% {
     margin-left: 5px;
+  }
+}
+@keyframes move {
+  0% {
+    transform: rotate(0deg);
+  }
+  30% {
+    transform: rotate(90deg);
+  }
+  70% {
+    transform: rotate(180deg);
+  }
+  100% {
+    transform: rotate(360deg);
   }
 }
 
