--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,9 @@ body {
 body::-webkit-scrollbar {
   display: none;
 }
+html {
+  scroll-behavior: smooth;
+}
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
