--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -23,6 +23,9 @@ form {
   position: fixed;
   z-index: 100000000;
   background-color: #fff;
+  transition: all 0.3s;
+}
+.active {
   box-shadow: 0px 0px 10px 0px rgb(191, 169, 255);
 }
 
@@ -38,6 +41,13 @@ form {
   width: 100px;
   height: 100%;
   border-radius: 20px 0px 0px 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.search-icon {
+  color: #fff;
+  font-size: 20px;
 }
 .search-input-cont input {
   width: 100%;
