--- a/src/Pages/Home/userCard/UserCard.css
+++ b/src/Pages/Home/userCard/UserCard.css
@@ -26,6 +26,7 @@
   height: 130px;
   background-color: rgb(117 93 191);
   position: relative;
+  border: 3px solid #fff;
 }
 .user-img img {
   width: 150px;
@@ -33,6 +34,7 @@
   border-radius: 50%;
   position: absolute;
   top: 30%;
+  border: 5px solid #fff;
 }
 .user-name {
   color: rgb(117 93 191);
@@ -110,12 +112,8 @@ a {
   }
 }
 @media screen and (max-width: 462px) {
-  .user-card {
-    width: 200px !important;
-    height: 240px !important;
-  }
   .user-name {
-    font-size: 20px;
+    font-size: 25px;
     margin-top: 60px;
   }
 }
